Fix JasperReports PDF export with Vietnamese font support
- Downgraded JasperReports from 7.0.3 to 6.20.0 for legacy JRXML compatibility
- Added jasperreports-fonts dependency for DejaVu Sans font support
- Added Vietnamese font styles with Identity-H encoding in template
- Added detailed error logging in ReportService for debugging
- Updated docker-compose.yml to use volume mount for templates

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
       # Jaspersoft template path inside container
       JASPER_TEMPLATE_PATH: /app/jasper-templates
     volumes:
-      # Mount Jaspersoft workspace để load template trực tiếp
+      # Mount Jasper templates từ Jaspersoft Studio (dynamic editing)
       - /home/nguyen-phi/JaspersoftWorkspace/MyReports:/app/jasper-templates:ro
     depends_on:
       keycloak:
