--- a/spring-boot-keycloak/pom.xml
+++ b/spring-boot-keycloak/pom.xml
@@ -115,13 +115,6 @@
             <version>8.7.0</version>
         </dependency>
         
-        <!-- TOTP for 2FA/MFA -->
-        <dependency>
-            <groupId>dev.samstevens.totp</groupId>
-            <artifactId>totp</artifactId>
-            <version>1.7.1</version>
-        </dependency>
-        
         <!-- Caffeine Cache for Rate Limiting -->
         <dependency>
             <groupId>com.github.ben-manes.caffeine</groupId>
@@ -169,6 +162,23 @@
             <groupId>com.github.librepdf</groupId>
             <artifactId>openpdf</artifactId>
             <version>1.3.32</version>
+        </dependency>
+        
+        <!-- Barcode/QR Code support for JasperReports -->
+        <dependency>
+            <groupId>net.sf.barcode4j</groupId>
+            <artifactId>barcode4j</artifactId>
+            <version>2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>core</artifactId>
+            <version>3.5.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>3.5.2</version>
         </dependency>
         
         <!-- JWT (JSON Web Token) for local token generation -->
