--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,17 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      JWT_SECRET: ${JWT_SECRET}
+      JWT_EXPIRATION: ${JWT_EXPIRATION:-3600000}
+      JWT_REFRESH_EXPIRATION: ${JWT_REFRESH_EXPIRATION:-86400000}
+      KEYCLOAK_REALM: ${KEYCLOAK_REALM:-phi-realm}
+      KEYCLOAK_RESOURCE: ${KEYCLOAK_RESOURCE:-spring-boot-app}
+      CORS_ALLOWED_ORIGINS: ${CORS_ALLOWED_ORIGINS:-http://localhost:4200}
+      CSP_CONNECT_SRC: ${CSP_CONNECT_SRC:-http://localhost:8082 http://localhost:8080}
+      RATELIMIT_IP: ${RATELIMIT_IP:-100}
+      RATELIMIT_LOGIN: ${RATELIMIT_LOGIN:-10}
+      RATELIMIT_USER: ${RATELIMIT_USER:-20}
+      RATELIMIT_REPORT: ${RATELIMIT_REPORT:-60}
       # Jaspersoft template path inside container
       JASPER_TEMPLATE_PATH: /app/jasper-templates
     volumes:
