--- a/my-angular-app/package.json
+++ b/my-angular-app/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
     "crypto-js": "^4.2.0",
+    "jsencrypt": "^3.5.4",
     "keycloak-js": "^26.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
